--- a/style.css
+++ b/style.css
@@ -38,11 +38,11 @@ nav {
   margin: 2.4em 1.4em 0 1.4em;
   display: flex;
   justify-content: space-between;
-  width: 100vw;
+  width: calc(100vw - 2.8em);
 }
 
 a.logo img {
-  width: 7.2em;
+  width: 33vw;
 }
 
 div.links,
@@ -54,13 +54,8 @@ div.humberger div {
   background-color: var(--neutral-Grayish-violet);
   height: 0.2em;
   width: 1.4em;
-  margin: 0.35em 2.8em;
+  margin: 0.35em 0em;
   border-radius: 18%;
-}
-
-div.illustartion img {
-  width: 10em;
-  height: auto;
 }
 
 div.humberger-menu {
@@ -94,4 +89,35 @@ div.humberger-menu a.hum-sign-in {
   margin: 0.5em 1.5em 1.3em 1.5em;
   border-radius: 3em;
   padding: 0.5em 0;
+}
+
+section.banner {
+  margin: 2em 0 0 0;
+  display: flex;
+  flex-direction: column-reverse;
+  width: 100vw;
+  overflow: hidden;
+}
+
+div.illustartion img {
+  width: auto;
+  height: 52vh;
+  margin-left: 1.5em;
+}
+
+div.get-started h1 {
+  text-align: center;
+  font-size: 2.6em;
+  margin: 0.6em 0 0 0.1em;
+  color: var(--neutral-very-dark-blue);
+  line-height: 1.2em;
+  letter-spacing: -1px;
+}
+
+div.get-started p {
+  color: var(--neutral-Grayish-violet);
+  margin: 0.7em 0.8em 0 1.1em;
+  font-size: 1.15em;
+  text-align: center;
+  line-height: 1.6em;
 }
