--- a/style.css
+++ b/style.css
@@ -137,3 +137,41 @@ div.get-started a {
   font-weight: 700;
   border-radius: 2em;
 }
+
+section.input {
+  background:no-repeat right top url("/My-Project/images/bg-shorten-mobile.svg");
+  background-color: var(--primary-dark-violet);
+  margin: 3.6em 1.5em;
+  padding: 1.5em 1.5em;
+  border-radius: 0.7em;
+}
+
+section.input form {
+  display: flex;
+  flex-direction: column;
+}
+
+form input {
+  height: 3.5em;
+  border-radius: 0.3em;
+  border: none;
+  padding:0.6em 1.5em 0 1.2em;
+}
+
+form input::placeholder {
+  font-weight: 400;
+  color: var(--neutral-Grayish-violet);
+  font-size: 1.2em;
+  font-family: "Poppins", sans-serif;
+}
+
+form button {
+  margin-top: 1em;
+  padding: 0.7em 0;
+  border-radius: 0.3em;
+  border: none;
+  background-color: var(--primary-cyan);
+  color: white;
+  font-weight: 700;
+  font-size: 1.2em;
+}
