--- a/style.css
+++ b/style.css
@@ -218,13 +218,12 @@ section.features div.image {
   background-color: var(--primary-dark-violet);
   right: auto;
   position: absolute;
-  margin: 0 8em;
+  /* margin: 0 8em; */
   padding: 1.3em 1.5em;
   border-radius: 50%;
   top: -2.5em;
-  /* z-index: 2; */
+  left: calc(50vw - 4.3em);
 }
-
 
 div.feature div.detailes {
   background-color: white;
@@ -238,4 +237,72 @@ div.detailes p {
   font-size: 1.05em;
   margin-top: 1.5em;
   line-height: 1.7em;
+}
+
+div.line {
+  position: absolute;
+  z-index: -4;
+  height: 50em;
+  width: 0.5em;
+  background-color: var(--primary-cyan);
+  left: calc(50vw - 0.25em);
+}
+
+section.boost {
+  background: no-repeat url(/My-Project/images/bg-boost-mobile.svg);
+  background-color: var(--primary-dark-violet);
+  height: 18em;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+section.boost h2 {
+  color: white;
+  padding-top: 3.5em;
+  font-weight: 700;
+  font-size: 1.7em;
+}
+
+section.boost a {
+  color: white;
+  background-color: var(--primary-cyan);
+  padding: 0.7em 1.5em;
+  font-size: 1.2em;
+  margin: 1em 4.5em;
+  display: block;
+  border-radius: 2em;
+}
+
+footer {
+  background-color: var(--neutral-dark-violet);
+  color: white;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding-bottom: 3em;
+}
+
+div.footer-logo {
+  filter: brightness(100);
+  padding-top: 3em;
+  padding-bottom: 1em;
+}
+
+li.head {
+  margin: 2em 0 1.2em 0;
+}
+
+div.footer-links a {
+  color: var(--neutral-Grayish-violet);
+  line-height: 2em;
+}
+
+div.social {
+  margin: 2.5em 0 0 0;
+}
+
+div.social a {
+  width: 2.7em;
+  display: inline-block;
 }
