header  banner styled for 1440px

--- a/style/boost.css
+++ b/style/boost.css
@@ -1,7 +1,7 @@
-:root {
+/* :root {
   --primary-cyan: hsl(180, 66%, 49%);
   --primary-dark-violet: hsl(257, 27%, 26%);
-}
+} */
 
 section.boost {
   background: no-repeat url(/My-Project/images/bg-boost-mobile.svg);
