--- a/style/input.css
+++ b/style/input.css
@@ -1,8 +1,8 @@
-:root {
+/* :root {
   --primary-cyan: hsl(180, 66%, 49%);
   --primary-dark-violet: hsl(257, 27%, 26%);
   --placeholder: hsl(257, 7%, 63%);
-}
+} */
 
 section.input {
   background: no-repeat right top
