--- a/style/features.css
+++ b/style/features.css
@@ -1,9 +1,9 @@
-:root {
+/* :root {
   --primary-cyan: hsl(180, 66%, 49%);
   --primary-dark-violet: hsl(257, 27%, 26%);
   --neutral-Grayish-violet: hsl(257, 7%, 63%);
   --neutral-dark-violet: hsl(260, 8%, 14%);
-}
+} */
 
 div.background {
   position: absolute;
