--- a/style/footer.css
+++ b/style/footer.css
@@ -1,7 +1,7 @@
-:root {
+/* :root {
   --neutral-Grayish-violet: hsl(257, 7%, 63%);
   --neutral-dark-violet: hsl(260, 8%, 14%);
-}
+} */
 
 footer {
   background-color: var(--neutral-dark-violet);
