fully styled for 1440px

--- a/style/answers(1440px).css
+++ b/style/answers(1440px).css
@@ -5,7 +5,7 @@
 
   section.answers div {
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: 50% auto auto;
     justify-content: space-between;
     padding: 1em 0;
   }
