--- a/style/boost.css
+++ b/style/boost.css
@@ -1,8 +1,3 @@
-/* :root {
-  --primary-cyan: hsl(180, 66%, 49%);
-  --primary-dark-violet: hsl(257, 27%, 26%);
-} */
-
 section.boost {
   background: no-repeat url(/My-Project/images/bg-boost-mobile.svg);
   background-color: var(--primary-dark-violet);
@@ -27,4 +22,22 @@ section.boost a {
   margin: 1em 4.5em;
   display: block;
   border-radius: 2em;
+}
+
+@media (min-width: 376px) {
+  section.boost {
+    background: no-repeat url(/My-Project/images/bg-boost-desktop.svg);
+    background-color: var(--primary-dark-violet);
+    height: 15.7em;
+  }
+
+  section.boost h2 {
+    padding-top: 1.5em;
+    font-size: 2.3em;
+  }
+
+  section.boost a {
+    font-weight: 700;
+    margin: 1em 32.4em;
+  }
 }
