--- a/style/footer.css
+++ b/style/footer.css
@@ -1,8 +1,3 @@
-/* :root {
-  --neutral-Grayish-violet: hsl(257, 7%, 63%);
-  --neutral-dark-violet: hsl(260, 8%, 14%);
-} */
-
 footer {
   background-color: var(--neutral-dark-violet);
   color: white;
@@ -34,4 +29,23 @@ div.social {
 div.social a {
   width: 2.7em;
   display: inline-block;
+}
+
+@media (min-width: 376px) {
+  footer {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: baseline;
+    padding: 1.5em 2em 4em 2em;
+  }
+
+  div.footer-links {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  div.footer-links ul {
+    text-align: left;
+    margin: 0 3em;
+  }
 }
