--- a/style/input.css
+++ b/style/input.css
@@ -14,6 +14,7 @@ section.input form {
 
 form input {
   height: 3.5em;
+  width: 100%;
   border-radius: 0.3em;
   border: none;
   padding: 0.6em 1.5em 0 1.2em;
